[gd_scene load_steps=31 format=2]

[ext_resource path="res://Src/Weapons/Modifications/LazerDesignators/LazerDesignator.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Assets/Sounds/M4a1_shoot.wav" type="AudioStream" id=2]
[ext_resource path="res://Src/Assets/Weapons/Guns/AssaultRifle_MuzzleFlash.png" type="Texture" id=3]
[ext_resource path="res://Src/Weapons/AssaultRifles/Trm17.gd" type="Script" id=4]
[ext_resource path="res://Src/Assets/Weapons/Guns/trm17.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 22.25 )

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 17.1429, 2.5 )

[sub_resource type="Animation" id=43]
resource_name = "Idle_TRM17-down"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -1.75 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Sprite/Muzzle:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 20 ) ]
}

[sub_resource type="Animation" id=44]
resource_name = "Idle_TRM17-left"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Sprite/Muzzle:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -35, -4 ) ]
}

[sub_resource type="Animation" id=45]
resource_name = "Idle_TRM17-right"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Sprite/Muzzle:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 35, -4 ) ]
}

[sub_resource type="Animation" id=46]
resource_name = "Idle_TRM17-up"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Sprite/Muzzle:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -26 ) ]
}

[sub_resource type="Animation" id=47]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/Sprite/Mods/LazerBeam:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5.00001, 39 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0.249999 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -105.714, -5 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Node2D/Sprite/Muzzle:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -82, -5 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.980392, 0.803922, 0.388235, 1 ) ]
}

[sub_resource type="Animation" id=48]
resource_name = "Shooting_TRM17-down"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/Sprite/Muzzle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 20 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 40 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 0.980392, 0.803922, 0.388235, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -90.0 ]
}

[sub_resource type="Animation" id=49]
resource_name = "Shooting_TRM17-left"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -3, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -52, -5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 0.980392, 0.803922, 0.388235, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -180.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Node2D/Sprite/Muzzle:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -40, -4 ) ]
}

[sub_resource type="Animation" id=50]
resource_name = "Shooting_TRM17-right"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 3, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Sprite/Muzzle:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 38, -4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 52, -5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.980392, 0.803922, 0.388235, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=51]
resource_name = "Shooting_TRM17-up"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/Sprite/Muzzle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -47 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/Sprite/MuzzleFlashSprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.980392, 0.803922, 0.388235, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=83]
animation = "Idle_M4A1-left"

[sub_resource type="AnimationNodeAnimation" id=84]
animation = "Idle_M4A1-down"

[sub_resource type="AnimationNodeAnimation" id=85]
animation = "Idle_M4A1-right"

[sub_resource type="AnimationNodeAnimation" id=86]
animation = "Idle_M4A1-up"

[sub_resource type="AnimationNodeBlendSpace2D" id=34]
blend_point_0/node = SubResource( 83 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 84 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 85 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 86 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=81]
animation = "Shooting_TRM17-left"

[sub_resource type="AnimationNodeAnimation" id=82]
animation = "Shooting_TRM17-down"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "Shooting_TRM17-right"

[sub_resource type="AnimationNodeAnimation" id=69]
animation = "Shooting_TRM17-up"

[sub_resource type="AnimationNodeBlendSpace2D" id=39]
blend_point_0/node = SubResource( 81 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 82 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 68 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 69 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachine" id=60]
states/IdleTRM17/node = SubResource( 34 )
states/IdleTRM17/position = Vector2( 228, 116 )
states/Shooting/node = SubResource( 39 )
states/Shooting/position = Vector2( 430, 116 )
transitions = [ "IdleTRM17", "Shooting", SubResource( 40 ), "Shooting", "IdleTRM17", SubResource( 41 ) ]
start_node = "IdleTRM17"

[sub_resource type="AnimationNodeStateMachinePlayback" id=61]

[node name="Trm17" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.249999 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
scale = Vector2( 0.7, 1 )
texture = ExtResource( 5 )
hframes = 6
frame = 4

[node name="MuzzleFlashSprite" type="Sprite" parent="Node2D/Sprite"]
visible = false
modulate = Color( 0.980392, 0.803922, 0.388235, 1 )
position = Vector2( -105.714, -5 )
texture = ExtResource( 3 )
hframes = 4
frame = 2

[node name="Mods" type="Node2D" parent="Node2D/Sprite"]
scale = Vector2( 1.42857, 1 )

[node name="LazerBeam" parent="Node2D/Sprite/Mods" instance=ExtResource( 1 )]
visible = false
position = Vector2( -5.00001, 39 )

[node name="Hitbox" type="Area2D" parent="Node2D/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Sprite/Hitbox"]
visible = false
position = Vector2( 38.5714, -4 )
shape = SubResource( 42 )

[node name="Muzzle" type="Node2D" parent="Node2D/Sprite"]
position = Vector2( -82, -5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle_TRM17-down = SubResource( 43 )
anims/Idle_TRM17-left = SubResource( 44 )
anims/Idle_TRM17-right = SubResource( 45 )
anims/Idle_TRM17-up = SubResource( 46 )
anims/RESET = SubResource( 47 )
anims/Shooting_TRM17-down = SubResource( 48 )
anims/Shooting_TRM17-left = SubResource( 49 )
anims/Shooting_TRM17-right = SubResource( 50 )
anims/Shooting_TRM17-up = SubResource( 51 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 60 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 61 )
parameters/IdleTRM17/blend_position = Vector2( 0, 0 )
parameters/Shooting/blend_position = Vector2( 0, 0 )

[node name="M4A1_Shoot_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
